--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Ubuntu DevSecOps Pipeline
+name: Pro DevSecOps Pipeline
 
 on:
   push:
@@ -6,13 +6,45 @@ on:
 
 env:
   IMAGE_NAME: flask-app
-  ACR_NAME: ubuntuacrraslen 
+  TF_STATE_RG: RG-Terraform-State
+  TF_STATE_STORAGE: tfstateraslen2025
+  TF_STATE_CONTAINER: tfstate
+  TF_KEY: terraform.tfstate
 
 jobs:
-  build-secure-deploy:
+  provision-infrastructure:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform Init
+        run: |
+          cd terraform
+          terraform init \
+            -backend-config="resource_group_name=$TF_STATE_RG" \
+            -backend-config="storage_account_name=$TF_STATE_STORAGE" \
+            -backend-config="container_name=$TF_STATE_CONTAINER" \
+            -backend-config="key=$TF_KEY"
+
+      - name: Terraform Apply
+        run: |
+          cd terraform
+          terraform apply -auto-approve
+
+  build-secure-deploy:
+    needs: provision-infrastructure
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Login to Azure ACR
@@ -25,14 +57,20 @@ jobs:
       - name: Build Docker Image
         run: docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }} -t ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:latest ./app
 
-      - name: 🛡️ Trivy Security Scan
+      - name: Trivy Security Scan
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: '${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'
           format: 'table'
-          exit-code: '1' # Fails if critical bugs found
+          exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
 
       - name: Push to ACR
         run: docker push --all-tags ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ubuntu-webapp-raslen
+          images: '${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:latest'
