--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,8 @@ on:
     branches: [ "main" ]
 
 env:
-  IMAGE_NAME: flask-app
+  # We will use 'my-app' to match your current setup, but you can change this to 'flask-app' if you prefer
+  IMAGE_NAME: my-app
   TF_STATE_RG: RG-Terraform-State
   TF_STATE_STORAGE: tfstateraslen2025
   TF_STATE_CONTAINER: tfstate
@@ -18,7 +19,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Login to Azure
+      - name: Log in to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
@@ -47,7 +48,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Login to Azure ACR
+      - name: Log in to Azure ACR
         uses: docker/login-action@v2
         with:
           registry: ${{ secrets.ACR_LOGIN_SERVER }}
@@ -55,7 +56,9 @@ jobs:
           password: ${{ secrets.ACR_PASSWORD }}
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }} -t ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:latest ./app
+        run: |
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+                       -t ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:latest .
 
       - name: Trivy Security Scan
         uses: aquasecurity/trivy-action@master
@@ -67,10 +70,11 @@ jobs:
           severity: 'CRITICAL,HIGH'
 
       - name: Push to ACR
-        run: docker push --all-tags ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}
+        run: |
+          docker push --all-tags ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ubuntu-webapp-raslen
-          images: '${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:latest'
+          app-name: 'ubuntu-webapp-raslen'
+          images: '${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'
