--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,20 +33,19 @@ jobs:
           terraform init \
             -backend-config="resource_group_name=$TF_STATE_RG" \
             -backend-config="storage_account_name=$TF_STATE_STORAGE" \
-            -backend-config="container_name=$TF_STATE_CONTAINER" \
-            -backend-config="key=$TF_KEY"
-
-      - name: Terraform Apply
-        run: |
-          cd terraform
-          terraform apply -auto-approve
-
   build-secure-deploy:
     needs: provision-infrastructure
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+
+      # --- THIS IS THE MISSING PART ---
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # --------------------------------
 
       - name: Log in to Azure ACR
         uses: docker/login-action@v2
@@ -77,4 +76,12 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'ubuntu-webapp-raslen'
-          images: '${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'
+          images: '${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'          -backend-config="container_name=$TF_STATE_CONTAINER" \
+            -backend-config="key=$TF_KEY"
+
+      - name: Terraform Apply
+        run: |
+          cd terraform
+          terraform apply -auto-approve
+
+  
