--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,6 @@ on:
     branches: [ "main" ]
 
 env:
-  # We will use 'my-app' to match your current setup, but you can change this to 'flask-app' if you prefer
   IMAGE_NAME: my-app
   TF_STATE_RG: RG-Terraform-State
   TF_STATE_STORAGE: tfstateraslen2025
@@ -33,6 +32,14 @@ jobs:
           terraform init \
             -backend-config="resource_group_name=$TF_STATE_RG" \
             -backend-config="storage_account_name=$TF_STATE_STORAGE" \
+            -backend-config="container_name=$TF_STATE_CONTAINER" \
+            -backend-config="key=$TF_KEY"
+
+      - name: Terraform Apply
+        run: |
+          cd terraform
+          terraform apply -auto-approve
+
   build-secure-deploy:
     needs: provision-infrastructure
     runs-on: ubuntu-latest
@@ -40,12 +47,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # --- THIS IS THE MISSING PART ---
+      # --- This is the step that was missing before ---
       - name: Log in to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      # --------------------------------
+      # ------------------------------------------------
 
       - name: Log in to Azure ACR
         uses: docker/login-action@v2
@@ -76,12 +83,4 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'ubuntu-webapp-raslen'
-          images: '${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'          -backend-config="container_name=$TF_STATE_CONTAINER" \
-            -backend-config="key=$TF_KEY"
-
-      - name: Terraform Apply
-        run: |
-          cd terraform
-          terraform apply -auto-approve
-
-  
+          images: '${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'
